# OpenGLMultiSkeleton

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
doc/: Doxyfile  mainpage.dox
shaders/: overlay.frag  overlay.vert
src/: cinder_skeleton.cpp  glfw2_skeleton.cpp  glfw3_skeleton.cpp  glfw3_skeleton_2win.cpp  glut_skeleton.cpp  pez.cocoa.mm  pez.h  pez_app_skeleton.cpp  pez_linux_skeleton.cpp  pez_windows_skeleton.cpp  sdl2_skeleton.cpp  sdl_skeleton.cpp
src/appskeleton/: AntAppSkeleton.cpp  AntAppSkeleton.h  AppSkeleton.cpp  AppSkeleton.h  GlutAppSkeleton.cpp  GlutAppSkeleton.h  TriAppSkeleton.cpp  TriAppSkeleton.h
src/utils/GL/: ShaderFunctions.cpp
src/vectormath/: vector_make_helpers.cpp  vector_make_helpers.h  vectortypes.h
